# Tocharisch-LLM

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  node_ontology.yml  pyproject.toml
Tocharisch_Fragmente/: .gitignore  dictionaries_dummy.xml  fragments_dummy.xml
prompts/: answer_generation_nodes.md  cypher_generation.md  decide_user_wish.md  decide_user_wish_backup.md  extend_cypher.md  judge_relevance.md  query_rewrite.md
src/agents_src/: agent_data_definitions.py  agents.py
src/domain/: fragments.py
src/infrastructure/: mapper.py  neo4jconnector.py
src/notebooks/: result.json
src/rag/: neo4j_qdrant_connection.py  qdrant.py  query_rag.py
src/services/: __init__.py  ingestion.py  run_ingestion.py
src/streamlit/: app.py  app_utils.py
src/utils/: utils_functions.py
